# Cargo.toml
[package]
name = "tenzro"
version = "0.1.0"
edition = "2021"
authors = ["Tenzro Team <eng@tenzro.com>"]
description = "Official Rust SDK for Tenzro API"
license = "MIT"
repository = "https://github.com/tenzro/tenzro-rust"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"